system/minio/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-tailnet
  namespace: minio
spec:
  # This is the magic line that tells Tailscale to take over this Ingress
  ingressClassName: tailscale
  tls:
    - hosts:
        # This will be the hostname of the machine on your Tailnet
        - minio
  defaultBackend:
    service:
      name: minio-console
      port:
        number: 9001
